fix: correct overflow-x: hidden

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,12 +34,13 @@
   font-weight: 700;
   font-style: normal;
 }
-
+html{
+  overflow-x: hidden;
+}
 * {
   box-sizing: border-box;
   text-size-adjust: none;
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 h1,
